EZ-1203 final implementation, updated API, application.properties, tests, service, error handlers and database

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -28,6 +28,9 @@ easy:
         from: "<from-address>"
         to: "<to-address>"
     service:
+      moodle:
+        sync:
+          url: "<url>"
       await-assessment:
         sleep-start-ms: 1000
         sleep-step-ms: 150
