EZ-1203 update api

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -990,7 +990,7 @@ paths:
         - name: students
           in: body
           schema:
-            description: Student ids or emails.
+            description: Student emails.
             properties:
               students:
                 type: array
