EZ-1203 implement cron for 'regular' pending access

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -32,6 +32,9 @@ easy:
         sync:
           url: "<url>"
           cron: "<cron>"
+      pending:
+        sync:
+          cron: "<cron>"
       await-assessment:
         sleep-start-ms: 1000
         sleep-step-ms: 150
