EZ-1207 initial implementation

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -29,6 +29,7 @@ easy:
         to: "<to-address>"
     service:
       moodle:
+        grade: "<url>"
         sync:
           url: "<url>"
           cron: "<cron>"
