--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1038,6 +1038,18 @@ paths:
                 type: integer
 
 
+  /courses/{courseId}/moodlesync/grades:
+    parameters:
+      - $ref: '#/parameters/CourseId'
+    post:
+      summary: One-way sync course grades with Moodle
+      tags:
+        - teacher
+      responses:
+        200:
+          description: Grades were successfully synced
+
+
   /teacher/courses/{courseId}/students/{studentId}:
     delete:
       summary: Remove this student from this course.
