EZ-1209 course exercise index normalisation cron job

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -43,3 +43,6 @@ easy:
     pending-access:
       clean:
         cron: "0 5 3 * * *"
+
+    exercise-index-normalisation:
+      cron: "0 5 3 * * *"
