--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,7 +5,7 @@ liquibaseProperties.load(new FileInputStream(
 
 buildscript {
     ext {
-        springBootVersion = '2.1.1.RELEASE'
+        springBootVersion = '2.2.2.RELEASE'
         liquibaseVersion = '2.0.1'
     }
     repositories {
@@ -66,6 +66,10 @@ dependencies {
     implementation "org.postgresql:postgresql:42.2.8"
     liquibaseRuntime 'org.liquibase:liquibase-core:3.6.1'
     liquibaseRuntime 'org.postgresql:postgresql:42.2.8'
+    // After updating Spring Boot to 2.2.2 liquibase-core has a missing logback-classic dep.
+    // Maybe not required with future releases:
+    // https://stackoverflow.com/questions/50487054/cant-run-liquibase-with-command-line
+    liquibaseRuntime 'ch.qos.logback:logback-classic:1.2.3'
 
     // Kotlin support
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
