--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -3,6 +3,9 @@ object AppProperties {
     const val EMS_ROOT = "https://dev.ems.lahendus.ut.ee/v2"
     const val KEYCLOAK_CONF_URL = "https://dev.lahendus.ut.ee/static/keycloak.json"
     const val KEYCLOAK_TOKEN_MIN_VALID_SEC = 30
+
     const val LOG_DEBUG_ENABLED = true
     const val LOG_WARN_ENABLED = true
+
+    const val CM_MODE_URL_TEMPLATE = "https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/mode/%N/%N.min.js"
 }
