core add students to course api spec, add required fields

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1058,6 +1058,10 @@ paths:
                         properties:
                           id:
                             type: string
+                        required:
+                          - id
+                  required:
+                    - email
       responses:
         200:
           description: Students added.
