core read participants return moodle username for active students

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -973,6 +973,8 @@ paths:
                       type: array
                       items:
                         $ref: '#/definitions/Group'
+                    moodle_username:
+                      type: string
                   required:
                     - id
                     - email
