core modify exercise service only for admins (temporary)

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1202,7 +1202,7 @@ paths:
     put:
       summary: Modify exercise.
       tags:
-        - teacher
+        - admin
       parameters:
         - name: exercise
           in: body
