EZ-1211 course accesses back to using ids as PKs due to exposed bug, sync moodle groups, insert group accesses in checkin

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1371,11 +1371,9 @@ paths:
           description: Number of student access added, pending and removed.
           schema:
             properties:
-              students_added:
+              students_synced:
                 type: integer
-              pending_students_added:
-                type: integer
-              student_access_removed:
+              pending_students_synced:
                 type: integer
 
 
