--- a/core/build.gradle
+++ b/core/build.gradle
@@ -61,7 +61,12 @@ dependencies {
     implementation 'io.github.microutils:kotlin-logging:1.7.6'
 
     // Database
-    implementation 'org.jetbrains.exposed:exposed:0.17.7'
+    implementation 'org.jetbrains.exposed:exposed-core:0.20.3'
+    implementation 'org.jetbrains.exposed:exposed-java-time:0.20.3'
+    implementation 'org.jetbrains.exposed:exposed-dao:0.20.3'
+    implementation 'org.jetbrains.exposed:exposed-jodatime:0.20.3'
+    implementation 'org.jetbrains.exposed:exposed-jdbc:0.20.3'
+
     implementation 'com.zaxxer:HikariCP:3.4.1'
     implementation "org.postgresql:postgresql:42.2.9"
     liquibaseRuntime 'org.liquibase:liquibase-core:3.6.1'
