EZ-1223 update db schema, api, tests, tables and services to show and add created_at for course accesses

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -1302,6 +1302,9 @@ paths:
                       type: string
                     family_name:
                       type: string
+                    created_at:
+                      type: string
+                      format: date-time
                     groups:
                       type: array
                       items:
@@ -1326,6 +1329,9 @@ paths:
                       type: string
                     family_name:
                       type: string
+                    created_at:
+                      type: string
+                      format: date-time
                     groups:
                       type: array
                       items:
