EZ-1282 teacher read course exercise details service returns exercise id

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -976,6 +976,8 @@ paths:
           description: Exercise details.
           schema:
             properties:
+              exercise_id:
+                type: string
               title:
                 type: string
               title_alias:
@@ -1043,6 +1045,7 @@ paths:
                     - id
                     - name
             required:
+              - exercise_id
               - title
               - grader_type
               - threshold
