--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -13,4 +13,5 @@ object AppProperties {
     const val MATHJAX_CONF = "MathJax = {options: {renderActions: {addMenu: [0, '', '']}}};"
 
     const val GRADE_TABLE_ROWS_ON_PAGE = 50
+    const val PARTICIPANTS_ROWS_ON_PAGE = 50
 }
