--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -14,4 +14,5 @@ object AppProperties {
 
     const val GRADE_TABLE_ROWS_ON_PAGE = 50
     const val PARTICIPANTS_ROWS_ON_PAGE = 50
+    const val SUBMISSIONS_ROWS_ON_PAGE = 50
 }
