--- a/core/build.gradle
+++ b/core/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // Cache
-    implementation 'com.hazelcast:hazelcast-spring'
+    implementation 'com.github.ben-manes.caffeine:caffeine:2.8.1'
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.6'
